<resources>
    <string name="app_name">áKitchen</string>
    <string name="tab_text_1">Shopping list</string>
    <string name="tab_text_2">Bought items</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="enter_item_hint">Enter item</string>
    <string name="add_button_text">Add</string>
    <string name="reenter_password">re-enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="set_new_admin">Set new admin</string>

    <string-array name="test_items">
        <item>baking soda</item>
        <item>carrots</item>
        <item>frozen pizza</item>
        <item>onion</item>
        <item>cofee</item>
        <item>covfefe</item>
        <item>lava</item>
        <item>diamond</item>
        <item>baking soda</item>
        <item>carrots</item>
        <item>frozen pizza</item>
        <item>onion</item>
        <item>cofee</item>
        <item>covfefe</item>
        <item>lava</item>
        <item>diamond</item>
        <item>baking soda</item>
        <item>carrots</item>
        <item>frozen pizza</item>
        <item>onion</item>
        <item>cofee</item>
        <item>covfefe</item>
        <item>lava</item>
        <item>diamond</item>
        <item>baking soda</item>
        <item>carrots</item>
        <item>frozen pizza</item>
        <item>onion</item>
        <item>cofee</item>
        <item>covfefe</item>
        <item>lava</item>
        <item>diamond</item>
        <item>baking soda</item>
        <item>carrots</item>
        <item>frozen pizza</item>
        <item>onion</item>
        <item>cofee</item>
        <item>covfefe</item>
        <item>lava</item>
        <item>diamond</item>
    </string-array>

    <string-array name="test_names">
        <item>Firstname Lastname (1)</item>
        <item>Firstname Lastname (2)</item>
        <item>Firstname Lastname (3)</item>
        <item>Firstname Lastname (4)</item>
        <item>Firstname Lastname (5)</item>
        <item>Firstname Lastname (6)</item>
    </string-array>

    <integer-array name="test_values">
        <item>400</item>
        <item>500</item>
        <item>-300</item>
        <item>-200</item>
        <item>-600</item>
        <item>350</item>
    </integer-array>

    <string-array name="test_dates">
        <item>19/06/2021</item>
        <item>04/06/2021</item>
        <item>22/05/2021</item>
        <item>07/05/2021</item>
        <item>25/04/2021</item>
        <item>10/04/2021</item>
    </string-array>

    <integer-array name="test_sizes">
        <item>4</item>
        <item>5</item>
        <item>-4</item>
        <item>-7</item>
        <item>-8</item>
        <item>10</item>
    </integer-array>

    <integer-array name="test_sums">
        <item>437</item>
        <item>550</item>
        <item>522</item>
        <item>819</item>
        <item>875</item>
        <item>1369</item>
    </integer-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_price">Enter price</string>
    <string name="buy_button_text">Buy</string>
    <string name="delete_account">Delete account</string>
    <string name="leave_kitchen">Leave kitchen</string>
    <string name="logout">Logout</string>
    <string name="overview">Overview</string>
    <string name="history">History</string>
    <string name="current">Current</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="you_have_not_joined_a_kitchen_please_create_one_or_join_another">You have not joined a kitchen please create one or join another</string>
    <string name="create_kitchen">Create Kitchen</string>
    <string name="join_kitchen">Join Kitchen</string>
    <string name="invite_code">Invite Code</string>
    <string name="update_name">Update name</string>
    <string name="conclude_button_text">Settle Accounts</string>
    <string name="dkk">&#160;DKK</string>
    <string name="export_button_text">Export Selection</string>
    <string name="size">&#160;People</string>
    <string name="settle_accounts_success">Accounts successfully settled!</string>
    <string name="settle_accounts_fail">Failed to settle accounts!</string>

</resources>